--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
-    "@nestjs/passport": "^10.0.2",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/bcryptjs": "^2.4.4",
     "@types/passport-local": "^1.0.35",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "joi": "^17.10.1",
     "mongodb": "^6.1.0",
@@ -50,10 +51,12 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
