feat: add payment service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,19 @@ services:
     env_file:
       - ./apps/auth/.env
 
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    command: npm run start:dev payments
+    ports:
+      - 3002:3002
+    volumes:
+      - .:/usr/src/app
+    env_file:
+      - ./apps/payments/.env
+
   mongo:
     image: mongo:latest
     ports:
