--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,12 +32,22 @@ services:
       dockerfile: ./apps/payments/Dockerfile
       target: development
     command: npm run start:dev payments
-    ports:
-      - 3002:3002
     volumes:
       - .:/usr/src/app
     env_file:
       - ./apps/payments/.env
+
+  notifications:
+    build:
+      context: .
+      dockerfile: ./apps/notifications/Dockerfile
+      target: development
+    command: npm run start:dev notifications
+
+    volumes:
+      - .:/usr/src/app
+    env_file:
+      - ./apps/notifications/.env
 
   mongo:
     image: mongo:latest
