feat:mail integrated

--- a/apps/notifications/.env
+++ b/apps/notifications/.env
@@ -1,1 +1,5 @@
 PORT=3004
+SMTP_USER=sayinmehmet47@gmail.com
+GOOGLE_AUTH_CLIENT_ID=544915548475-nhd5o7hkpt90uobh4vpi1cbu7u34b3qd.apps.googleusercontent.com
+GOOGLE_AUTH_CLIENT_SECRET=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
+GOOGLE_AUTH_REFRESH_TOKEN=1//04GyBy_jnX5zVCgYIARAAGAQSNwF-L9IrPWWcmGLClRqwhLB81jUrdskfbntHU17ZYCAzfEfmOw-eAdOQZmKGx6YvGX8NvBJyEd4
