--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/bcryptjs": "^2.4.4",
+    "@types/nodemailer": "^6.4.11",
     "@types/passport-local": "^1.0.35",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -40,6 +41,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "nestjs-pino": "^3.4.0",
+    "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
