feat: [UDP-4665] from mongodb to mysql

--- a/apps/reservations/.env
+++ b/apps/reservations/.env
@@ -1,6 +1,11 @@
-MONGODB_URI= mongodb://mongo:27017/sleepr
 PORT=3000
 AUTH_HOST=auth
 AUTH_PORT=3002
 PAYMENTS_HOST=payments
 PAYMENTS_PORT=3003
+MYSQL_DATABASE= sleepr
+MYSQL_PASSWORD= password
+MYSQL_USER= root
+MYSQL_HOST= db
+MYSQL_PORT=3306
+MYSQL_SYNCHRONIZE = true
