--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "@types/bcryptjs": "^2.4.4",
     "@types/nodemailer": "^6.4.11",
     "@types/passport-local": "^1.0.35",
@@ -40,6 +41,7 @@
     "joi": "^17.10.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
+    "mysql2": "^3.6.3",
     "nestjs-pino": "^3.4.0",
     "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
@@ -49,7 +51,8 @@
     "pino-pretty": "^10.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "stripe": "^13.7.0"
+    "stripe": "^13.7.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
