--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,3 +56,12 @@ services:
       - .env
     ports:
       - 3306:3306
+
+  rabbitmq:
+    image: rabbitmq
+    restart: always
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ./rabbitmq:/var/lib/rabbitmq
