--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/nodemailer": "^6.4.11",
     "@types/passport-local": "^1.0.35",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
